app/grafana/ingress.yaml
#@ load("@ytt:data", "data")
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-insecure
  namespace: #@ data.values.grafana.namespace
  labels:
    #@yaml/text-templated-strings
    (@= data.values.domain @)/loadbalancer: default
spec:
  entryPoints:
  - http
  routes:
  - match: #@ "Host(`{}`)".format(data.values.grafana.fqdn)
    kind: Rule
    priority: 12
    services:
    - name: grafana
      port: 3000
      strategy: RoundRobin
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-secure
  namespace: #@ data.values.grafana.namespace
  labels:
    #@yaml/text-templated-strings
    (@= data.values.domain @)/loadbalancer: default
spec:
  entryPoints:
  - https
  routes:
  - match: #@ "Host(`{}`)".format(data.values.grafana.fqdn)
    kind: Rule
    priority: 12
    services:
    - name: grafana
      port: 3000
      strategy: RoundRobin
  tls:
    secretName: certificate-grafana
